Cmake: finally build terrasync under Windows

--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -5,7 +5,8 @@ add_executable(terrasync terrasync.cxx)
 
 target_link_libraries(terrasync 
 	${SIMGEAR_LIBRARIES}
-	${ZLIB_LIBRARIES})
+	${ZLIB_LIBRARIES}
+    ${WINSOCK_LIBRARY})
 
 if(HAVE_SVN_CLIENT)
 	target_link_libraries(terrasync ${SVN_CLIENT_LIBRARIES})
