--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -1,6 +1,10 @@
 
-find_package(SvnClient)
-
+if(LIBSVN_FOUND)
+	message(STATUS "includes '${LIBSVN_INCLUDE_DIRS}'")
+	include_directories(${LIBSVN_INCLUDE_DIRS})
+	add_definitions(${APR_CFLAGS})
+endif(LIBSVN_FOUND)
+	
 add_executable(terrasync terrasync.cxx)
 
 target_link_libraries(terrasync 
@@ -8,8 +12,8 @@ target_link_libraries(terrasync
 	${ZLIB_LIBRARIES}
     ${WINSOCK_LIBRARY})
 
-if(HAVE_SVN_CLIENT)
-	target_link_libraries(terrasync ${SVN_CLIENT_LIBRARIES})
+if(LIBSVN_FOUND)
+	target_link_libraries(terrasync ${LIBSVN_LIBRARIES})
 endif()
 
 
