Cmake: resolve clock_gettime

--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(GPSsmooth
 	${WINMM_LIBRARY}
 	${WINSOCK_LIBRARY}
 	${ZLIB_LIBRARIES}
+	${RT_LIBRARY}
 )
 
 target_link_libraries(MIDGsmooth 
@@ -28,6 +29,7 @@ target_link_libraries(MIDGsmooth
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
 	${WINSOCK_LIBRARY}
+	${RT_LIBRARY}
 )
 
 target_link_libraries(UGsmooth 
@@ -43,6 +45,7 @@ target_link_libraries(UGsmooth
 	${WINMM_LIBRARY}
 	${WINSOCK_LIBRARY}
 	${ZLIB_LIBRARIES}
+	${RT_LIBRARY}
 )
 
 install(TARGETS GPSsmooth MIDGsmooth UGsmooth RUNTIME DESTINATION bin)
