Olaf Flebbe: incorporate plib js code to fix problems with MS joysticks under Vista and 7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,25 @@ if(EVENT_INPUT)
 	endif()
 else(EVENT_INPUT)
 	set(ENABLE_PLIB_JOYSTICK 1)
+
+    message(STATUS "adding runtime JS dependencies")
+    if(APPLE)
+    # resolve frameworks to full paths
+        find_library(IOKIT_LIBRARY IOKit)
+        find_library(CF_LIBRARY CoreFoundation)
+        set(JS_LIBS ${IOKIT_LIBRARY} ${CF_LIBRARY})
+    elseif(WIN32)
+        find_library(WINMM_LIBRARY winmm)
+        set(JS_LIBS ${WINMM_LIBRARY})
+    elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
+        # anything needed here?
+    elseif(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
+        find_library(USBHID_LIBRARY usbhid)
+        # check_function_exists(hidinit)
+        set(JS_LIBS ${USBHID_LIBRARY})
+    else()
+        message(WARNING "Unsupported platform for JS libs")
+    endif()
 endif(EVENT_INPUT)
 
 if (MSVC_3RDPARTY_DIR)
@@ -116,7 +135,7 @@ if(ENABLE_LIBSVN)
 	endif(LIBSVN_FOUND)
 endif(ENABLE_LIBSVN)
 
-find_package(PLIB REQUIRED puaux pu js fnt)
+find_package(PLIB REQUIRED puaux pu fnt)
 find_package(SimGear 2.2.0 REQUIRED)
 
 check_include_file(unistd.h HAVE_UNISTD_H)
