--- a/src/Input/CMakeLists.txt
+++ b/src/Input/CMakeLists.txt
@@ -5,15 +5,6 @@ set(EVENT_INPUT_SOURCES
 	FGMacOSXEventInput.cxx
 	)
 
-set (JS_INPUT_SOURCES
-	js.cxx
-	jsBSD.cxx
-	jsLinux.cxx
-	jsMacOSX.cxx
-	jsWindows.cxx
-	jsNone.cxx
-	)
-
 set(SOURCES
 	FGButton.cxx
 	FGCommonInput.cxx
@@ -22,18 +13,13 @@ set(SOURCES
 	FGJoystickInput.cxx
 	FGKeyboardInput.cxx
 	FGMouseInput.cxx
-	input.cxx
+	input.cxx	
 	)
-
-#
-# we still have a dependency on ul from plib!
-
+	
 if(EVENT_INPUT)
 	list(APPEND SOURCES ${EVENT_INPUT_SOURCES})
-else()
-	list(APPEND SOURCES ${JS_INPUT_SOURCES})
 endif()
-
+	
 set(FGJS_SOURCES
 	fgjs.cxx
 	jsinput.cxx
@@ -47,20 +33,17 @@ if(WIN32)
 endif(WIN32)
 
 target_link_libraries(fgjs 
-    fgInput
     ${SOCKETS_LIBRARY}
 	${SIMGEAR_LIBRARIES}
 	${PLIB_LIBRARIES}
-	${JS_LIBS}
 	${ZLIB_LIBRARY})
 
-add_executable(js_demo js_demo.cxx )
+add_executable(js_demo js_demo.cxx)
 
-target_link_libraries(js_demo
-	fgInput
-	${JS_LIBS}
+target_link_libraries(js_demo 
+	${SIMGEAR_LIBRARIES}
 	${PLIB_LIBRARIES}
-	)
+	${ZLIB_LIBRARY})
 
 flightgear_component(Input "${SOURCES}")
 
