--- a/src/Input/Makefile.am
+++ b/src/Input/Makefile.am
@@ -18,6 +18,8 @@ if HAVE_FRAMEWORK_PLIB
 js_demo_LDFLAGS = $(plib_FRAMEWORK)
 fgjs_LDFLAGS = $(plib_FRAMEWORK) 
 else
+js_demo_PLIB_LIBS = -lplibjs -lplibul
+fgjs_PLIB_LIBS = -lplibjs -lplibul
 js_demo_LDFLAGS =
 fgjs_LDFLAGS=
 endif
@@ -34,18 +36,17 @@ libInput_a_SOURCES = input.cxx input.hxx FGCommonInput.cxx FGCommonInput.hxx \
 	FGMouseInput.cxx FGMouseInput.hxx \
 	FGKeyboardInput.cxx FGKeyboardInput.hxx \
 	FGJoystickInput.cxx FGJoystickInput.hxx \
-	js.cxx jsBSD.cxx jsLinux.cxx jsMacOSX.cxx jsNone.cxx FGjs.hxx \
         $(libInput_Event_SOURCES)
 
 bin_PROGRAMS = js_demo fgjs
 
-js_demo_SOURCES = js_demo.cxx 
+js_demo_SOURCES = js_demo.cxx
 
-js_demo_LDADD = $(base_LIBS) -L. -lInput -lplibul
+js_demo_LDADD = $(js_demo_PLIB_LIBS) $(base_LIBS) $(joystick_LIBS)
 
 fgjs_SOURCES = fgjs.cxx jsinput.cxx jsinput.h jssuper.cxx jssuper.h
 
-fgjs_LDADD = $(base_LIBS) $(joystick_LIBS) -L. -lInput -lplibul \
+fgjs_LDADD = $(js_demo_PLIB_LIBS) $(base_LIBS) $(joystick_LIBS) \
 	-lsgprops -lsgmisc -lsgio -lsgdebug -lsgstructure -lsgxml -lz $(network_LIBS)
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/src/Main \
