Working Cmake-terrasync-libsvn support. Probably needs additional refinement, but testable.

--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -1,8 +1,6 @@
 
 if(LIBSVN_FOUND)
-	message(STATUS "includes '${LIBSVN_INCLUDE_DIRS}'")
-	include_directories(${LIBSVN_INCLUDE_DIRS})
-	add_definitions(${APR_CFLAGS})
+	include_directories(${LIBSVN_INCLUDE_DIR})
 endif(LIBSVN_FOUND)
 	
 add_executable(terrasync terrasync.cxx)
@@ -14,6 +12,7 @@ target_link_libraries(terrasync
 
 if(LIBSVN_FOUND)
 	target_link_libraries(terrasync ${LIBSVN_LIBRARIES})
+	set_property(TARGET terrasync APPEND PROPERTY COMPILE_FLAGS ${APR_CFLAGS})
 endif()
 
 
