Fix bug #253, at least partially
make options
--wind=nnn@mm
--visibility
--visibility-miles
--ceiling
--turbulence
work again. These options now write properties in the
/environment/config/presets
branch. The values will be applied in the property-rules
in FGDATA/Environment/interpolator.xml

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3413,6 +3413,14 @@
 				RelativePath="..\..\..\src\Environment\terrainsampler.hxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\Environment\presets.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Environment\presets.hxx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Lib_Model"
