--- a/src/Environment/Makefile.am
+++ b/src/Environment/Makefile.am
@@ -17,6 +17,6 @@ libEnvironment_a_SOURCES = \
 	ridge_lift.cxx ridge_lift.hxx \
 	ephemeris.cxx ephemeris.hxx \
 	terrainsampler.cxx terrainsampler.cxx \
-	presets.cxx presets.cxx
+	presets.cxx presets.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
