--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -1,7 +1,4 @@
 
-if(LIBSVN_FOUND)
-	include_directories(${LIBSVN_INCLUDE_DIR})
-endif(LIBSVN_FOUND)
 	
 add_executable(terrasync terrasync.cxx)
 
@@ -12,7 +9,13 @@ target_link_libraries(terrasync
 
 if(LIBSVN_FOUND)
 	target_link_libraries(terrasync ${LIBSVN_LIBRARIES})
-	set_property(TARGET terrasync APPEND PROPERTY COMPILE_FLAGS ${APR_CFLAGS})
+	set_property(TARGET terrasync APPEND PROPERTY COMPILE_FLAGS "${APR_CFLAGS}")
+	
+	IF(APPLE)
+	    set_property(SOURCE terrasync.cxx PROPERTY COMPILE_FLAGS "-iwithsysroot ${LIBSVN_INCLUDE_DIR}")
+	ELSE()
+	    include_directories(${LIBSVN_INCLUDE_DIR})
+	ENDIF(APPLE)
 endif()
 
 
