Cmake: set an icon to the Windows executable

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+if (MSVC)
+	set( RESOURCE_FILE flightgear.rc )
+endif (MSVC)
+
 set(SOURCES
 	CameraGroup.cxx
 	FGEventHandler.cxx
@@ -21,6 +25,7 @@ set(SOURCES
 	util.cxx
 	viewer.cxx
 	viewmgr.cxx
+	${RESOURCE_FILE}
 	)
 	
 add_executable(fgfs ${SOURCES})
