Unified handling of (fuel-)tank properties
Ensure consistent properties for all fuel tanks

--- a/src/FDM/CMakeLists.txt
+++ b/src/FDM/CMakeLists.txt
@@ -130,6 +130,7 @@ set(SOURCES
 	fdm_shell.cxx
 	flight.cxx
 	flightProperties.cxx
+	TankProperties.cxx
 	groundcache.cxx
 	${SP_FDM_SOURCES}
 	ExternalNet/ExternalNet.cxx
