Repair windows vc90 build broken by TankProperties commit

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -2450,6 +2450,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\FDM\TankProperties.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\FDM\TankProperties.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\FDM\flight.cxx"
 				>
 			</File>
