--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -5,6 +5,7 @@ libSound_a_SOURCES = \
 	fg_fx.cxx fg_fx.hxx \
 	morse.cxx morse.hxx \
 	voice.cxx voice.hxx \
-	sample_queue.cxx sample_queue.hxx
+	sample_queue.cxx sample_queue.hxx \
+	voiceplayer.cxx voiceplayer.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
