Make sure Include/config.h gets found which is located in /src

--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -8,4 +8,4 @@ libSound_a_SOURCES = \
 	sample_queue.cxx sample_queue.hxx \
 	voiceplayer.cxx voiceplayer.hxx
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_builddir) -I$(top_builddir)/src
