adding changed files for previous commit.

--- a/src/ATC/Makefile.am
+++ b/src/ATC/Makefile.am
@@ -2,6 +2,8 @@ noinst_LIBRARIES = libATC.a
 
 libATC_a_SOURCES = \
 	atis_mgr.cxx atis_mgr.hxx \
+	atcdialog.cxx atcdialog.hxx \
+	atc_mgr.cxx atc_mgr.hxx \
 	trafficcontrol.cxx trafficcontrol.hxx 
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
