Bruce Hellstrom @ ATC Flight Sim. New module contributed: AV400WSim. Supports communication with external (aka real) Garmin 400/500 WAAS flight sim units.  Includes changes to options.cxx and fg_io.cxx to support invoking and configuring the new module.

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -19,6 +19,7 @@ libNetwork_a_SOURCES = \
 	atlas.cxx atlas.hxx \
 	AV400.cxx AV400.hxx \
 	AV400Sim.cxx AV400Sim.hxx \
+	AV400WSim.cxx AV400WSim.hxx \
 	garmin.cxx garmin.hxx \
 	lfsglass.cxx lfsglass.hxx lfsglass_data.hxx \
         httpd.cxx httpd.hxx \
