Blindly attempt to add AV400WSim.[ch]xx to the VC90 project file.

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -2978,6 +2978,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\Network\AV400WSim.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Network\AV400WSim.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\Network\garmin.cxx"
 				>
 			</File>
