Expose FGPositioned data via property tree, and make comm-stations a real FGPositioned subclass.

--- a/src/ATC/CMakeLists.txt
+++ b/src/ATC/CMakeLists.txt
@@ -1,8 +1,8 @@
 include(FlightGearComponent)
 
 set(SOURCES
-	atis_mgr.cxx
 	trafficcontrol.cxx
+	CommStation.cxx
 	)
 	
 flightgear_component(ATC "${SOURCES}")
