--- a/src/ATC/Makefile.am
+++ b/src/ATC/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libATC.a
 
 libATC_a_SOURCES = \
-	atis_mgr.cxx atis_mgr.hxx \
+    CommStation.cxx CommStation.hxx \
 	trafficcontrol.cxx trafficcontrol.hxx 
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
