Compute gravitational acceleration
Compute gravitational acceleration based on the formula of
Somigliana corrected for altitude and provide the value
in property /environment/gravitational-acceleration-mps2

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3437,6 +3437,14 @@
 				RelativePath="..\..\..\src\Environment\presets.hxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\Environment\gravity.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Environment\gravity.hxx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Lib_Model"
