--- a/src/Environment/CMakeLists.txt
+++ b/src/Environment/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES
 	ridge_lift.cxx
 	terrainsampler.cxx
 	presets.cxx
+	gravity.cxx
 	)
 	
 flightgear_component(Environment "${SOURCES}")
