Initial hacking on nav-display instrument, derived from the wxradar code

--- a/src/Instrumentation/CMakeLists.txt
+++ b/src/Instrumentation/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SOURCES
 	turn_indicator.cxx
 	vertical_speed_indicator.cxx
 	wxradar.cxx
+	NavDisplay.cxx
     HUD/HUD.cxx
     HUD/HUD_dial.cxx
     HUD/HUD_gauge.cxx
