Initial commit to add fgpanel to cmake build system
Most likely only works on OSX, other OSes will follow later

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -5,3 +5,7 @@ add_subdirectory(GPSsmooth)
 if (FLTK_FOUND)
     add_subdirectory(fgadmin)
 endif (FLTK_FOUND)
+
+if (WITH_FGPANEL)
+    add_subdirectory(fgpanel)
+endif (WITH_FGPANEL)
