Martin Spott: Add CMake DBus support for event driven input. Tested on Linux only, please improve if you see fit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ endif()
 
 if(EVENT_INPUT)
 	message(STATUS "checking event-based Input")
+	find_package(DBus)
 	IF(APPLE)
 
 	elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
