--- a/src/Aircraft/CMakeLists.txt
+++ b/src/Aircraft/CMakeLists.txt
@@ -4,5 +4,11 @@ set(SOURCES
 	controls.cxx
 	replay.cxx
 	)
-	
-flightgear_component(Aircraft "${SOURCES}")
+
+set(HEADERS
+	controls.hxx
+	replay.hxx
+	)
+
+
+flightgear_component(Aircraft "${SOURCES}" "${HEADERS}")
