--- a/src/Autopilot/CMakeLists.txt
+++ b/src/Autopilot/CMakeLists.txt
@@ -16,4 +16,20 @@ set(SOURCES
 	route_mgr.cxx
 	)
 	
-flightgear_component(Autopilot "${SOURCES}")
+set(HEADERS
+	analogcomponent.hxx
+	autopilot.hxx
+	autopilotgroup.hxx
+	component.hxx
+	digitalcomponent.hxx
+	digitalfilter.hxx
+	flipflop.hxx
+	inputvalue.hxx
+	logic.hxx
+	pidcontroller.hxx
+	pisimplecontroller.hxx
+	predictor.hxx
+	route_mgr.hxx
+	)
+    	
+flightgear_component(Autopilot "${SOURCES}" "${HEADERS}")
