--- a/src/Systems/CMakeLists.txt
+++ b/src/Systems/CMakeLists.txt
@@ -7,5 +7,14 @@ set(SOURCES
 	system_mgr.cxx
 	vacuum.cxx
 	)
+
+set(HEADERS
+	electrical.hxx
+	pitot.hxx
+	static.hxx
+	system_mgr.hxx
+	vacuum.hxx
+	)
+
 	
-flightgear_component(Systems "${SOURCES}")
+flightgear_component(Systems "${SOURCES}" "${HEADERS}")
