Fix make dist rule for removed files. (will pick to 2.4)

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -1,5 +1,4 @@
-EXTRA_DIST = jpg-httpd.cxx jpg-httpd.hxx \
-             multiplay.cxx multiplay.hxx
+EXTRA_DIST = jpg-httpd.cxx jpg-httpd.hxx
 
 noinst_LIBRARIES = libNetwork.a
 
