Enable build of fgpanel by default in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ option(ENABLE_JSBSIM "Set to ON to build FlightGear with JSBSim FDM" ON)
 option(ENABLE_FGADMIN "Set to ON to build FlightGear with FGADMIN" ON)
 option(EVENT_INPUT "Set to ON to build FlightGear with event-based Input support" OFF)
 option(ENABLE_LIBSVN "Set to ON to build FlightGear/terrasync with libsvnclient support" OFF)
+option(WITH_FGPANEL "Set to ON to build the fgpanel application" ON)
 
 set(MSVC_3RDPARTY_ROOT NOT_FOUND CACHE PATH "Location where the third-party dependencies are extracted")
 
@@ -63,6 +64,12 @@ if(LOGGING)
 	# nothing
 else()
 	set(FG_NDEBUG 1)
+endif()
+
+if(WITH_FGPANEL)
+	message(STATUS "Will build fgpanel")
+else()
+	message(STATUS "Will NOT build fgpanel")
 endif()
 
 if(SP_FDMS)
